Update index.html: add project cards & update GitHub link

--- a/index.html
+++ b/index.html
@@ -45,29 +45,34 @@
     <section id="github" class="section">
         <h2>GitHub</h2>
         <p>I host much of my open source work on GitHub. You can explore my repositories, see what I’m currently working on and review past projects.</p>
-        <!-- Replace the href below with your actual GitHub profile URL if different -->
-        <a href="https://github.com/hadarbalzam" target="_blank" rel="noopener" class="btn">Visit my GitHub</a>
+        <!-- Updated profile link to point at the active GitHub account -->
+        <a href="https://github.com/hadar201" target="_blank" rel="noopener" class="btn">Visit my GitHub</a>
     </section>
 
     <!-- Projects section – a place to feature other notable work -->
     <section id="projects" class="section">
         <h2>Projects</h2>
         <div class="projects-grid">
-            <!-- Individual project cards. Add as many as you like by copying this block and updating the content. -->
+            <!-- Project cards showcasing real repositories -->
             <div class="project-card">
-                <h3>Project One</h3>
-                <p>A short description of your first featured project. Explain what the project does, your role in building it and the technologies involved.</p>
-                <a href="#" class="btn small" target="_blank">Learn&nbsp;More</a>
+                <h3>AVLFingerTree</h3>
+                <p>Python implementation of an AVL finger tree data structure. Demonstrates balanced tree operations and provides a functional programming interface.</p>
+                <a href="https://github.com/hadar201/AVLFingerTree" class="btn small" target="_blank" rel="noopener">View&nbsp;Repo</a>
             </div>
             <div class="project-card">
-                <h3>Project Two</h3>
-                <p>A short description of another project. Mention any interesting challenges you overcame or outcomes you achieved.</p>
-                <a href="#" class="btn small" target="_blank">Learn&nbsp;More</a>
+                <h3>pypi‑package‑scraper</h3>
+                <p>A Python CLI tool that fetches all available versions of packages from PyPI. Utilises asynchronous requests, optional proxy support and CSV output.</p>
+                <a href="https://github.com/hadar201/pypi-package-scraper" class="btn small" target="_blank" rel="noopener">View&nbsp;Repo</a>
             </div>
             <div class="project-card">
-                <h3>Project Three</h3>
-                <p>An optional third project. You can remove this or add additional cards depending on how many projects you wish to showcase.</p>
-                <a href="#" class="btn small" target="_blank">Learn&nbsp;More</a>
+                <h3>python‑boot</h3>
+                <p>Simple Python bot example demonstrating an event loop, command handling and extensible design. A great starting point for creating your own chat bots.</p>
+                <a href="https://github.com/hadar201/python-boot" class="btn small" target="_blank" rel="noopener">View&nbsp;Repo</a>
+            </div>
+            <div class="project-card">
+                <h3>Personal Website</h3>
+                <p>This portfolio itself! A modern, responsive website built with HTML, CSS and a touch of JavaScript to showcase my CV, grades and open source projects.</p>
+                <a href="https://github.com/hadar201/hadarbalzam.com" class="btn small" target="_blank" rel="noopener">View&nbsp;Repo</a>
             </div>
         </div>
     </section>
