Update cv.html: add personal details, experience, skills, and academic grades

--- a/cv.html
+++ b/cv.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <a href="index.html#home" class="logo">Hadar&nbsp;Balzam</a>
+            <a href="index.html#home" class="logo">Hadar Balzam</a>
             <ul>
                 <li><a href="index.html#cv">CV</a></li>
                 <li><a href="index.html#github">GitHub</a></li>
@@ -18,53 +18,120 @@
         </nav>
     </header>
     <main class="section">
-        <h2>Curriculum&nbsp;Vitae</h2>
-        <p class="cv-intro">Below is a sample CV layout. Replace this content with your real information to showcase your education, experience and skills.</p>
+        <h2>Curriculum Vitae</h2>
+        <p class="cv-intro">This CV highlights my academic progress, professional experience and extracurricular activities. You can also <a href="Hadar_Balzam_CV.pdf" target="_blank" rel="noopener">download the full PDF version</a>.</p>
         <div class="cv-container">
+            <!-- Personal Details -->
             <section class="cv-section">
                 <h3>Personal Details</h3>
                 <ul>
                     <li><strong>Name:</strong> Hadar Balzam</li>
-                    <li><strong>Email:</strong> you@example.com</li>
+                    <li><strong>Phone:</strong> +972‑508291760</li>
+                    <li><strong>Email:</strong> <a href="mailto:hadar2013002@gmail.com">hadar2013002@gmail.com</a></li>
                     <li><strong>Location:</strong> Ramat Gan, Israel</li>
-                    <li><strong>LinkedIn:</strong> <a href="#">linkedin.com/in/hadarbalzam</a></li>
+                    <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/hadar-balzam" target="_blank" rel="noopener">linkedin.com/in/hadar-balzam</a></li>
+                    <li><strong>GitHub:</strong> <a href="https://github.com/hadar201" target="_blank" rel="noopener">github.com/hadar201</a></li>
                 </ul>
             </section>
+
+            <!-- Professional Summary -->
             <section class="cv-section">
                 <h3>Professional Summary</h3>
-                <p>Results‑oriented software engineer with X years of experience designing, developing and delivering web and mobile applications. Proficient in full‑stack development, with a passion for clean code, user‑focused design and continuous learning.</p>
+                <p>Motivated and detail‑oriented Computer Science student at Tel Aviv University (starting October 2024) with two years of hands‑on experience in cybersecurity. Proficient in Python, SQL, Bash and PowerShell, with a passion for problem‑solving, software development and data analysis. Skilled at identifying complex technical challenges, designing scalable solutions through automation and custom logic, and collaborating across teams to ensure operational efficiency and product excellence.</p>
             </section>
+
+            <!-- Experience -->
             <section class="cv-section">
                 <h3>Experience</h3>
-                <h4>Software Engineer · Company Name</h4>
-                <p><em>Dates of employment</em></p>
+                <h4>MXDR Analyst · Sygnia – Tel Aviv</h4>
+                <p><em>Nov 2023 — Nov 2024</em></p>
                 <ul>
-                    <li>Describe your responsibilities and achievements here.</li>
-                    <li>Use bullet points to highlight key contributions.</li>
-                    <li>Mention technologies, frameworks or tools used.</li>
+                    <li>Developed custom detection logic with Python and SQL to analyse large datasets and improve threat visibility.</li>
+                    <li>Applied automation to optimise security processes and streamline detection workflows.</li>
+                    <li>Analysed system behaviour and network traffic using data insights to refine security models.</li>
+                    <li>Managed and troubleshot cloud environments in Azure and AWS, integrating secure software practices.</li>
                 </ul>
-                <h4>Previous Position · Another Company</h4>
-                <p><em>Dates of employment</em></p>
+                <h4>Incident Responder · White‑Hat LTD – Tel Aviv</h4>
+                <p><em>Feb 2023 — Nov 2023</em></p>
                 <ul>
-                    <li>Describe a second role or relevant experience.</li>
-                    <li>Highlight any leadership or collaborative achievements.</li>
+                    <li>Automated incident response workflows with Bash and PowerShell, reducing response times.</li>
+                    <li>Created playbooks for ransomware, data exfiltration and DDoS scenarios, enhancing incident response.</li>
+                    <li>Travelled to North and Latin America to provide on‑premises security solutions and conduct in‑depth assessments.</li>
+                    <li>Optimised Windows and Linux environments with advanced scripting to automate processes and improve efficiency.</li>
+                </ul>
+                <h4>Combat Soldier & Team Commander · INS LAHAV, IDF Navy – Haifa</h4>
+                <p><em>Nov 2019 — Jun 2022</em></p>
+                <ul>
+                    <li>Operated advanced weapon systems, specialising in attack missiles and electronic warfare.</li>
+                    <li>Led and trained a team in high‑pressure environments, ensuring operational readiness and mission success.</li>
                 </ul>
             </section>
+
+            <!-- Education -->
             <section class="cv-section">
                 <h3>Education</h3>
-                <p><strong>Degree Name</strong>, University Name – City, Country</p>
-                <p><em>Graduation Year</em></p>
-                <p>Include a brief description of your coursework or research topics if relevant.</p>
+                <p><strong>Computer Science (B.Sc.)</strong>, Tel Aviv University – Tel Aviv</p>
+                <p><em>Oct 2024 — Present</em></p>
+                <p><strong>Cybersecurity Specialist – Soldiers to High‑Tech Program</strong>, Kernslios – Herzliyya</p>
+                <p><em>Oct 2022 — Jan 2023</em></p>
+                <p><strong>Full Bagrut</strong>, High School – Ramat Gan</p>
+                <p><em>Sep 2016 — Jun 2018</em></p>
             </section>
+
+            <!-- Skills -->
             <section class="cv-section">
                 <h3>Skills</h3>
                 <ul class="skills-list">
-                    <li>Programming languages: JavaScript/TypeScript, Python, Java</li>
-                    <li>Frameworks: React, Node.js, Express</li>
-                    <li>Tools: Git, Docker, AWS</li>
-                    <li>Database: PostgreSQL, MongoDB</li>
-                    <li>Soft skills: communication, teamwork, problem solving</li>
+                    <li><strong>Programming &amp; Scripting:</strong> Python, SQL, Bash, PowerShell</li>
+                    <li><strong>Security Tools:</strong> SIEM, EDR, XDR, IDS/IPS</li>
+                    <li><strong>Cloud Platforms:</strong> Azure, AWS</li>
+                    <li><strong>Languages:</strong> Hebrew (native), English (highly proficient)</li>
+                    <li><strong>Soft Skills:</strong> teamwork, communication, problem solving</li>
                 </ul>
+            </section>
+
+            <!-- Extracurricular Activities -->
+            <section class="cv-section">
+                <h3>Extracurricular Activities</h3>
+                <ul>
+                    <li>Summer camp counsellor at Camp Yavneh, New Hampshire (Jun 2022 — Aug 2022).</li>
+                    <li>Foil fencer, Israel national champion – member of the Israel National Team (Jan 2010 — Jan 2018).</li>
+                    <li>Group leader in the Bnei Hamoshavim youth movement (Jan 2015 — Jul 2019).</li>
+                </ul>
+            </section>
+
+            <!-- Academic Performance -->
+            <section class="cv-section">
+                <h3>Academic Performance</h3>
+                <p>The following tables summarise my coursework grades during the 2024/25 academic year.</p>
+                <h4>First Semester</h4>
+                <table class="grades">
+                    <thead>
+                        <tr><th>Course</th><th>Grade</th></tr>
+                    </thead>
+                    <tbody>
+                        <tr><td>Calculus 1a</td><td>60</td></tr>
+                        <tr><td>Linear Algebra 1a</td><td>72</td></tr>
+                        <tr><td>Extended Introduction to Computer Science</td><td>91</td></tr>
+                        <tr><td>Discrete Mathematics 1</td><td>90</td></tr>
+                        <tr><td><strong>Grade Point Average</strong></td><td>75.65</td></tr>
+                    </tbody>
+                </table>
+                <h4>Second Semester</h4>
+                <table class="grades">
+                    <thead>
+                        <tr><th>Course</th><th>Grade</th></tr>
+                    </thead>
+                    <tbody>
+                        <tr><td>Calculus 2a</td><td>81</td></tr>
+                        <tr><td>Linear Algebra 2a</td><td>94</td></tr>
+                        <tr><td>Discrete Mathematics 2</td><td>100</td></tr>
+                        <tr><td>Software 1</td><td>91</td></tr>
+                        <tr><td>Data Structures</td><td>91</td></tr>
+                        <tr><td><strong>Grade Point Average</strong></td><td>89.96</td></tr>
+                    </tbody>
+                </table>
+                <p><strong>Overall GPA (2024/25):</strong> 82.96</p>
             </section>
         </div>
     </main>
