--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
                 <a href="https://github.com/hadar201/hadarbalzam.com" class="btn small" target="_blank" rel="noopener">View&nbsp;Repo</a>
             </div>
         </div>
+
+            <div class="project-card">
+      <h3>Fibonacci Heap</h3>
+      <p>University assignment for a data structures course: a Java implementation of a Fibonacci Heap supporting efficient mergeable heap operations.</p>
+      <a href="https://github.com/hadar201/FibonacciHeap" class="btn small" target="_blank" rel="noopener">View&nbsp;Repo</a>
+    </div>
+    <div class="project-card">
+      <h3>Weekly Techno Picks</h3>
+      <p>A Python AWS Lambda function that sends weekly acid/bouncy/house/groove techno track recommendations via a Telegram bot, built with the Spotify API and AI.</p>
+      <a href="https://github.com/hadar201/weekly-techno-picks" class="btn small" target="_blank" rel="noopener">View&nbsp;Repo</a>
+    </div>
     </section>
 
     <!-- Footer for copyright and contact information -->
