--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
       <p>A Python AWS Lambda function that sends weekly acid/bouncy/house/groove techno track recommendations via a Telegram bot, built with the Spotify API and AI.</p>
       <a href="https://github.com/hadar201/weekly-techno-picks" class="btn small" target="_blank" rel="noopener">View&nbsp;Repo</a>
     </div>
+      </div>
     </section>
 
     <!-- Footer for copyright and contact information -->
