Remove location and Ramat Gan reference from cv; fix Bagrut line

--- a/cv.html
+++ b/cv.html
@@ -28,7 +28,7 @@
                     <li><strong>Name:</strong> Hadar Balzam</li>
                     <li><strong>Phone:</strong> +972‑508291760</li>
                     <li><strong>Email:</strong> <a href="mailto:hadar2013002@gmail.com">hadar2013002@gmail.com</a></li>
-                    <li><strong>Location:</strong> Ramat Gan, Israel</li>
+                   
                     <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/hadar-balzam" target="_blank" rel="noopener">linkedin.com/in/hadar-balzam</a></li>
                     <li><strong>GitHub:</strong> <a href="https://github.com/hadar201" target="_blank" rel="noopener">github.com/hadar201</a></li>
                 </ul>
@@ -74,9 +74,9 @@
                 <p><em>Oct 2024 — Present</em></p>
                 <p><strong>Cybersecurity Specialist – Soldiers to High‑Tech Program</strong>, Kernslios – Herzliyya</p>
                 <p><em>Oct 2022 — Jan 2023</em></p>
-                <p><strong>Full Bagrut</strong>, High School – Ramat Gan</p>
+                <p><strong>Full Bagrut</strong>, High Schoool</p>
                 <p><em>Sep 2016 — Jun 2018</em></p>
-            </section>
+            </section
 
             <!-- Skills -->
             <section class="cv-section">
